{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 142,
  "lineage": "4c6f190e-e549-1839-d78c-e098e5d7a4be",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222575804024:security-group/sg-0ae591995aae204e9",
            "description": "Security group for EKS control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae591995aae204e9",
            "ingress": [],
            "name": "eks-modular-dev-eks-cluster-sg-20251112185451912400000001",
            "name_prefix": "eks-modular-dev-eks-cluster-sg-",
            "owner_id": "222575804024",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-modular-dev-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-modular-dev-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051e6d4cf12fcf4b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222575804024:security-group/sg-0bebf0a7d4441e24a",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bebf0a7d4441e24a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from NGINX LoadBalancer to worker nodes",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "Allow node-to-node \u0026 pod-to-pod communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks-modular-dev-eks-nodes-sg-20251112185451939800000002",
            "name_prefix": "eks-modular-dev-eks-nodes-sg-",
            "owner_id": "222575804024",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-modular-dev-eks-nodes-sg"
            },
            "tags_all": {
              "Name": "eks-modular-dev-eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051e6d4cf12fcf4b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "EKS control plane to node kubelet",
            "from_port": 1025,
            "id": "sgrule-1659032474",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-north-1",
            "security_group_id": "sg-0bebf0a7d4441e24a",
            "security_group_rule_id": "sgr-0f65f9e21fefde95d",
            "self": false,
            "source_security_group_id": "sg-0ae591995aae204e9",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.eks_cluster",
            "module.sg.aws_security_group.eks_nodes",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_to_nodes_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Control plane to workers on port 443",
            "from_port": 443,
            "id": "sgrule-1812197059",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-north-1",
            "security_group_id": "sg-0bebf0a7d4441e24a",
            "security_group_rule_id": "sgr-043756cfcd3b38457",
            "self": false,
            "source_security_group_id": "sg-0ae591995aae204e9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.eks_cluster",
            "module.sg.aws_security_group.eks_nodes",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-north-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052b58f340731149b",
            "arn": "arn:aws:ec2:eu-north-1:222575804024:elastic-ip/eipalloc-052b58f340731149b",
            "association_id": "eipassoc-0c14d608a7b8e60d0",
            "domain": "vpc",
            "id": "eipalloc-052b58f340731149b",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-05d711d847fb75dab",
            "private_dns": "ip-10-0-0-44.eu-north-1.compute.internal",
            "private_ip": "10.0.0.44",
            "public_dns": "ec2-51-21-231-193.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.231.193",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "eks-modular-dev-eip-eu-north-1a"
            },
            "tags_all": {
              "Name": "eks-modular-dev-eip-eu-north-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-north-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0671018b4ce46e6e1",
            "arn": "arn:aws:ec2:eu-north-1:222575804024:elastic-ip/eipalloc-0671018b4ce46e6e1",
            "association_id": "eipassoc-0d640df999f9215e6",
            "domain": "vpc",
            "id": "eipalloc-0671018b4ce46e6e1",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-01375606b39c8780c",
            "private_dns": "ip-10-0-1-88.eu-north-1.compute.internal",
            "private_ip": "10.0.1.88",
            "public_dns": "ec2-13-61-135-90.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.135.90",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "eks-modular-dev-eip-eu-north-1b"
            },
            "tags_all": {
              "Name": "eks-modular-dev-eip-eu-north-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222575804024:internet-gateway/igw-0d0aa298f214d4c46",
            "id": "igw-0d0aa298f214d4c46",
            "owner_id": "222575804024",
            "region": "eu-north-1",
            "tags": {
              "Name": "eks-modular-dev-igw"
            },
            "tags_all": {
              "Name": "eks-modular-dev-igw"
            },
            "vpc_id": "vpc-051e6d4cf12fcf4b7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-north-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052b58f340731149b",
            "association_id": "eipassoc-0c14d608a7b8e60d0",
            "connectivity_type": "public",
            "id": "nat-0aa3f0c72aaf61795",
            "network_interface_id": "eni-05d711d847fb75dab",
            "private_ip": "10.0.0.44",
            "public_ip": "51.21.231.193",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b42970ef1c55f9c5",
            "tags": {
              "Name": "eks-modular-dev-nat-eu-north-1a"
            },
            "tags_all": {
              "Name": "eks-modular-dev-nat-eu-north-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-north-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0671018b4ce46e6e1",
            "association_id": "eipassoc-0d640df999f9215e6",
            "connectivity_type": "public",
            "id": "nat-034884bfdd42a2553",
            "network_interface_id": "eni-01375606b39c8780c",
            "private_ip": "10.0.1.88",
            "public_ip": "13.61.135.90",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ace86bf0d2dcdf01",
            "tags": {
              "Name": "eks-modular-dev-nat-eu-north-1b"
            },
            "tags_all": {
              "Name": "eks-modular-dev-nat-eu-north-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-north-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222575804024:route-table/rtb-0ef0c9353f2950423",
            "id": "rtb-0ef0c9353f2950423",
            "owner_id": "222575804024",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aa3f0c72aaf61795",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-modular-dev-private-rt-eu-north-1a"
            },
            "tags_all": {
              "Name": "eks-modular-dev-private-rt-eu-north-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-051e6d4cf12fcf4b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-north-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222575804024:route-table/rtb-08ea296ada393e977",
            "id": "rtb-08ea296ada393e977",
            "owner_id": "222575804024",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034884bfdd42a2553",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-modular-dev-private-rt-eu-north-1b"
            },
            "tags_all": {
              "Name": "eks-modular-dev-private-rt-eu-north-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-051e6d4cf12fcf4b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222575804024:route-table/rtb-0c3b63b180ffb7782",
            "id": "rtb-0c3b63b180ffb7782",
            "owner_id": "222575804024",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0aa298f214d4c46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-modular-dev-public-rt"
            },
            "tags_all": {
              "Name": "eks-modular-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-051e6d4cf12fcf4b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-north-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088cb769c76245551",
            "region": "eu-north-1",
            "route_table_id": "rtb-0ef0c9353f2950423",
            "subnet_id": "subnet-0ada2b7c8ed5d33e2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-north-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd77b18cb5ae0bb9",
            "region": "eu-north-1",
            "route_table_id": "rtb-08ea296ada393e977",
            "subnet_id": "subnet-0138f106a61e3f7cb"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-north-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df32228c7b45da5f",
            "region": "eu-north-1",
            "route_table_id": "rtb-0c3b63b180ffb7782",
            "subnet_id": "subnet-0b42970ef1c55f9c5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-north-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcc785c28e75fa03",
            "region": "eu-north-1",
            "route_table_id": "rtb-0c3b63b180ffb7782",
            "subnet_id": "subnet-0ace86bf0d2dcdf01"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-north-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222575804024:subnet/subnet-0ada2b7c8ed5d33e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ada2b7c8ed5d33e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222575804024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "eks-modular-dev-private-eu-north-1a",
              "kubernetes.io/cluster/eks-pvt-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-modular-dev-private-eu-north-1a",
              "kubernetes.io/cluster/eks-pvt-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-051e6d4cf12fcf4b7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-north-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222575804024:subnet/subnet-0138f106a61e3f7cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0138f106a61e3f7cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222575804024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "eks-modular-dev-private-eu-north-1b",
              "kubernetes.io/cluster/eks-pvt-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-modular-dev-private-eu-north-1b",
              "kubernetes.io/cluster/eks-pvt-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-051e6d4cf12fcf4b7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-north-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222575804024:subnet/subnet-0b42970ef1c55f9c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b42970ef1c55f9c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "222575804024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "eks-modular-dev-public-eu-north-1a",
              "kubernetes.io/cluster/eks-pvt-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-modular-dev-public-eu-north-1a",
              "kubernetes.io/cluster/eks-pvt-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-051e6d4cf12fcf4b7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-north-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222575804024:subnet/subnet-0ace86bf0d2dcdf01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ace86bf0d2dcdf01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "222575804024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "eks-modular-dev-public-eu-north-1b",
              "kubernetes.io/cluster/eks-pvt-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-modular-dev-public-eu-north-1b",
              "kubernetes.io/cluster/eks-pvt-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-051e6d4cf12fcf4b7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222575804024:vpc/vpc-051e6d4cf12fcf4b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a8fd01e8e1607dfb",
            "default_route_table_id": "rtb-07013e4b52281e388",
            "default_security_group_id": "sg-03044362f0ea867d0",
            "dhcp_options_id": "dopt-05c58014de560913c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051e6d4cf12fcf4b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07013e4b52281e388",
            "owner_id": "222575804024",
            "region": "eu-north-1",
            "tags": {
              "Name": "eks-modular-dev-vpc"
            },
            "tags_all": {
              "Name": "eks-modular-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}